[package]
name = "vte-ansi-tools"
version = "0.0.1"
authors = ["Dan Davison <dandavison7@gmail.com>"]
edition = "2018"
description = "ANSI utilities based on the VTE ANSI parser from the Alacritty terminal emulator"
repository = "https://github.com/dandavison/vte-ansi-tools"
license = "MIT"

[dependencies]
ansi_term = "0.12.1"
console = "0.15.0" # TODO: tests only
itertools = "0.10.3"
lazy_static = "1.4"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
vte = "0.10.1"
